--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ cmarkgfm==2024.1.14
 coverage==7.4.4
 docutils==0.20.1
 exceptiongroup==1.2.0
-importlib_metadata==7.0.2
+importlib_metadata==7.1.0
 iniconfig==2.0.0
 isort==5.13.2
 jaraco.classes==3.3.1
@@ -27,8 +27,8 @@ pluggy==1.4.0
 pyflakes==3.2.0
 pyproject_hooks==1.0.0
 pytest-cov==4.1.0
-pytest-network==0.0.1
 pytest==8.1.1
+pytest_network==0.0.1
 readme_renderer==43.0
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
