--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,7 @@ click==8.1.7
 cmarkgfm==2024.1.14
 coverage==7.4.4
 docutils==0.20.1
+exceptiongroup==1.2.0
 importlib_metadata==7.1.0
 iniconfig==2.0.0
 isort==5.13.2
@@ -34,5 +35,7 @@ readme_renderer==43.0
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==13.7.1
+tomli==2.0.1
 twine==5.0.0
+typing_extensions==4.10.0
 zipp==3.18.1
