--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,7 @@ sections="FUTURE,STDLIB,THIRDPARTY,OCTODNS,FIRSTPARTY,LOCALFOLDER"
 [tool.pytest.ini_options]
 filterwarnings = [
     'error',
+    # inside protobuf library :(
+    'ignore::DeprecationWarning:importlib:',
 ]
 pythonpath = "."
